check that the @fontface worked correctly and adjusted the ul padding to elimnate extra space.

--- a/css/style.css
+++ b/css/style.css
@@ -3,31 +3,38 @@
 ==================================== */
 @font-face {
     font-family: "trade-gothic-bold";
-    src: url("/fonts/trade-gothic/trade-gothic-bold.ttf") format('truetype');
+    src: url("../fonts/trade-gothic/trade-gothic-bold.ttf") format('truetype');
 } 
 @font-face{
-    font-family: "proxima-nova-light";
-    src: url("/fonts/proxima-nova/proxima-nova-regular.otf") format(opentype);
+    font-family: "proxima-nova-regular";
+    src: url("../fonts/proxima-nova/proxima-nova-regular.otf") format(opentype);
 }
 
+@font-face{
+    font-family: "proxima-nova-bold";
+    src: url("../fonts/proxima-nova/proxima-nova-bold.otf") format(opentype);
+}
 
+@font-face{
+    font-family: "proxima-nova-light";
+    src: url("../fonts/proxima-nova/proxima-nova-light.otf") format(opentype);
+}
 
 /* ================================= 
   Base Element Styles
 ==================================== */
 * {
     box-sizing: border-box;
-    border: solid 1px white;
   }
 
 body{
     background: #000;
     color: #878787;
-    font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font: 1em/1.5 "proxima-nova-light",Helvetica, Arial, sans-serif;
 }
 
 h1 {  
-    font-size: 4rem;
+    font: 4rem "trade-gothic-bold",Helvetica, Arial, sans-serif;
     color: rgba(255, 255, 255, 1);
     text-transform: uppercase;
     font-weight: normal;
@@ -40,7 +47,6 @@ ul {
     text-align: center;
     margin: auto;
     border-bottom: 2px dotted gray;
-    padding: 100px 0 100px;
     background: black;
 } 
 
@@ -76,6 +82,7 @@ ul {
     background-color: whitesmoke;
     border: 5px solid whitesmoke;
     border-radius: 30%;
+    margin: 1em;
   
 }    
 
@@ -97,7 +104,8 @@ ul {
 
 a:link {
     text-decoration: none;
-    color: white;
+    color: #000;
+    font-family: 'proxima-nova-light'
 
 } 
     
@@ -137,12 +145,11 @@ a:link {
         width: 100%;
     }
 
-    .second-nav,
-    .third-nav,
-    .bottom-nav {
-        float: right;
-        width: 30%;
-
+    #second-nav,
+    #third-nav,
+    #bottom-nav {
+        display:inline-block;
+        width: 100%;
     }
 
 
